--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "body-parser": "^1.19.0",
-    "codeflask": "github:jozsefsallai/codeflask",
+    "codeflask": "^1.4.1",
     "compression": "^1.7.1",
     "crypto-js": "3.1.9-1",
     "cuid": "^2.1.8",
